<?xml version="1.0"?>
<package>
  <name>proc_actuators</name>
  <version>1.0.0</version>
  <description>
    The proc_actuators process with the provider for the actuator
  </description>


  <author>Olivier Beguin</author>

  <maintainer email="olivier.beguinti@gmail.com">Olivier Beguin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>provider_actuators</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>provider_actuators</run_depend>
</package>
